--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
 <a name="synopsis" class="anchor" href="#synopsis"><span class="octicon octicon-link"></span></a>Synopsis</h3>
 
 <p>
-For request URL: http://hypestore.org/music/artist/prince/albums/1999/Little%20Red%20Corvette.wav
-
-Content-Type: audio/vnd.wave`
-
+For request URL: <code>http://hypestore.org/music/artist/prince/albums/1999/Little%20Red%20Corvette.wav</code>
+<p>
+<code>
+Content-Type: audio/vnd.wave
 Content-Length: 70790540`
 
 POST /music/artist/prince/albums/1999/Little%20Red%20Corvette.wav`
-
-Hypestore.org's Hypestore server receives the POST request, and stores the appropriate media asset in it's volume earmarked for storage (directly attached or "backless"). This is helpful, since the file will be available for Hypestore to respond with when the next GET /music/artist/prince/albums/1999/Little%20Red%20Corvette.wav comes around.
+</code>
+</p>
+<p>
+Hypestore.org's Hypestore server receives the POST request, and stores the appropriate media asset in it's volume earmarked for storage (directly attached or "backless"). This is helpful, since the file will be available for Hypestore to respond with when the next <code>GET /music/artist/prince/albums/1999/Little%20Red%20Corvette.wav</code> comes around.
 
 </p>
 
