--- a/index.html
+++ b/index.html
@@ -39,12 +39,10 @@
 <p>
 For request URL: <code>http://hypestore.org/music/artist/prince/albums/1999/Little%20Red%20Corvette.wav</code>
 <p>
-<code>
-Content-Type: audio/vnd.wave
-Content-Length: 70790540`
-
-POST /music/artist/prince/albums/1999/Little%20Red%20Corvette.wav`
-</code>
+<code>Content-Type: audio/vnd.wave</code>
+<code>Content-Length: 70790540</code>
+<br>
+<code>POST /music/artist/prince/albums/1999/Little%20Red%20Corvette.wav`</code>
 </p>
 <p>
 Hypestore.org's Hypestore server receives the POST request, and stores the appropriate media asset in it's volume earmarked for storage (directly attached or "backless"). This is helpful, since the file will be available for Hypestore to respond with when the next <code>GET /music/artist/prince/albums/1999/Little%20Red%20Corvette.wav</code> comes around.
