--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <p>
 For request URL: <code>http://hypestore.org/music/artist/prince/albums/1999/Little%20Red%20Corvette.wav</code>
 <p>
-<code>Content-Type: audio/vnd.wave</code>
+<code>Content-Type: audio/vnd.wave</code><br>
 <code>Content-Length: 70790540</code>
 <br>
 <code>POST /music/artist/prince/albums/1999/Little%20Red%20Corvette.wav`</code>
