--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 <p>Hypestore (HYPErtext STORage Engine) is a storage engine and coordinator for Hypertext.  Hypestore provides a frictionless way for applications using HTTP as a wire protocol to persist entity state.  It does it's best not to be too picky about what you throw at it, just don't cross RFC 2616.  Together, we'll be <code>200 OK</code>.</p>
 
 <h3>
+<a name="ambitions" class="anchor" href="#ambitions"><span class="octicon octicon-link"></span></a>Ambitions</h3>
+<p>
+unconditional RFC2616 compliance.
+</p>
+
+<h3>
 <a name="synopsis" class="anchor" href="#synopsis"><span class="octicon octicon-link"></span></a>Synopsis</h3>
 
 <p>
