--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ For request URL: <code>http://hypestore.org/music/artist/prince/albums/1999/Litt
 <code>POST /music/artist/prince/albums/1999/Little%20Red%20Corvette.wav</code>
 </p>
 <p>
-Hypestore.org's Hypestore server receives the POST request, and stores the appropriate media asset in it's volume earmarked for storage (directly attached or "backless"). This is helpful, since the file will be available for Hypestore to respond with when the next <code>GET /music/artist/prince/albums/1999/Little%20Red%20Corvette.wav</code> comes around.
+Hypestore.org's Hypestore server receives the POST request, and saves the appropriate resource (as a plain-old file) to it's configured storage volume (directly attached or "backless"). This is helpful, since the file will be available for Hypestore to respond with when the next <code>GET /music/artist/prince/albums/1999/Little%20Red%20Corvette.wav</code> comes around.
 
 </p>
 
