added why? section

--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
 <h3>
 <a name="ambitions" class="anchor" href="#ambitions"><span class="octicon octicon-link"></span></a>Ambitions</h3>
 <p>
-unconditional RFC 2616 compliance.
+Unconditional RFC 2616 compliance.
 </p>
+
+<a name="why" class="anchor" href="#why"><span class="octicon octicon-link"></span></a>Why?</h3>
+
+<p>
+At first glance, Hyperstore appears to be no different than the multitude of web servers out there (aside from, perhaps, it's RFC 2616 compliance aspirations.)  However, while most web server packages offer support for GET's that map directly to a file system; once you want to start mutating you need to resort to an explicit application layer or WebDAV (or something).  Let's stop these methodist practices and start treating all verbs as equal. 
+
 
 <h3>
 <a name="synopsis" class="anchor" href="#synopsis"><span class="octicon octicon-link"></span></a>Synopsis</h3>
