--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Unconditional RFC 2616 compliance.
 <a name="why" class="anchor" href="#why"><span class="octicon octicon-link"></span></a>Why?</h3>
 
 <p>
-At first glance, Hyperstore appears to be no different than the multitude of web servers out there (aside from, perhaps, it's RFC 2616 compliance aspirations.)  However, while most web server packages offer support for GET's that map directly to a file system; once you want to start mutating you need to resort to an explicit application layer or WebDAV (or something).  Let's stop these methodist practices and start treating all verbs as equal. 
+At first glance, Hypestore appears to be no different than the multitude of web servers out there (aside from, perhaps, it's RFC 2616 compliance aspirations.)  However, while most web server packages offer support for GET's that map directly to a file system; once you want to start mutating you need to resort to an explicit application layer or WebDAV (or something).  Let's stop these methodist practices and start treating all verbs as equal. 
 
 
 <h3>
